added restart option

--- a/conf.json.example
+++ b/conf.json.example
@@ -4,5 +4,9 @@
   "BotToken": "123456789:AAAAAAAAAA-_eeeeeeeeeeee",
   "AlertUser": "@YourUser",
   "AlertChatID": 1234567,
-  "Minutes": 10
+  "Minutes": 10,
+  "AdminUserID": 123456789,
+  "HetznerUser": "K1337",
+  "HetznerPassword": "neither-are-penguins",
+  "HetznerIP": "255.255.255.255"
 }
